<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AuthDagger</string>
    <string name="authentication">АВТОРИЗАЦИЯ</string>
    <string name="email">Email</string>
    <string name="button_register">Регистрация</string>
    <string name="button_remember">Забыли код?</string>
    <string name="incorrect_email">Неверный email</string>
    <string name="button_cancel">Отмена</string>
    <string name="dlgreg_authentication_title">Регистрация</string>
    <string name="dlgreg_button">Отправить</string>
    <string name="dlgreg_email">Email</string>
    <string name="dlgreg_password">Пароль</string>
    <string name="dlgreg_passwordcheck">Пароль(еще раз)</string>
    <string name="dlgreg_error_password">Пароль должен состоять из 5 цифр</string>
    <string name="dlgreg_error_passwordcheck">Пароли не совпадают</string>
    <string name="dlgreg_success">Пользователь зарегистрирован</string>
    <string name="error_connected_internet">Проверьте подключение Интернет</string>
    <string name="error_already_email">Такой email уже зарегистрирован</string>
    <string name="error_restore_password">Ошибка восстановления пароля</string>
    <string name="error_login_message">Неверный email или пароль</string>
    <string name="error_auth_service">Ошибка выполнения запроса</string>
    <string name="dlgrest_title">Восстановление</string>
    <string name="dlgrest_message">На ваш email будет отправлено письмо\nдля восстановления пароля</string>
    <string name="dlgrest_success">Запрос на восстановление отправлен</string>
    <string name="biometric_title">Вход в AuthApplication</string>
</resources>